# fal_api_mcp_server

./: README.md  pyproject.toml
src/fal_api_mcp_server/: server.py
